# game-of-life

./: .gitignore  01_hello_SDL  CMakeLists.txt  animation-test.c  animation.c  animation.h  animation.h.gch  graphics.c  graphics.h  input.c  main.c  output.txt  project-report.md  unit_test.c
graphics_c/02_getting_an_image_on_the_screen/: 01_hello_SDL  02_getting_an_image_on_the_screen.c  Makefile
graphics_c/02_getting_an_image_on_the_screen/03_event_driven_programming/: 01_hello_SDL  03_event_driven_programming.c
graphics_c/08_geometry_rendering/: 08_geometry_rendering.c
graphics_c/12_color_modulation/: 12_color_modulation.cpp
